[package]
name = "defi-bond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-program = "1.14.9"
spl-associated-token-account = { version="1.0.3", features = [ "no-entrypoint" ] }
spl-stake-pool = "0.6.4"
spl-token = "3.5.0"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.37"

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.14.9"
solana-sdk = "1.14.9"

[lib]
crate-type = ["cdylib", "lib"]